[package]
name = "ptmc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.13"
ndarray = {version = "0.16.1", features = ["serde"]}
ndarray-linalg = {version = "0.17.0", features = ["openblas"]}
plotters = "0.3.7"
rand = "0.9.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
